# VulkanEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.lua  build_engine.bat  build_unit_tests.bat  buildscript.py  compileShaders.bat  compileShaders.py  compile_shaders.bat  configure_engine.bat  configure_engine_no_args.bat  configure_unit_test.bat  create_solution.bat  lua.lua  node_main.bat  package-lock.json  package.json  premake5.lua  test.lua  tsconfig.json
application/: Application.cpp  Application.h  CMakeLists.txt
commonlib/: CMakeLists.txt
core/: Defines.h  File.cpp  File.h  IResource.h  Timer.h
core/String/: HashString.cpp  HashString.h
core/containers/: Array.h
core/hash/: Murmur3.cpp
core/math/: Matrix44.h  Vector.h  Vector3.h  Vector4.h
core/utilities/: utilities.cpp  utilities.h
engine/: buildscript.py
executable/: CMakeLists.txt  main_win64.cpp
game/: Game.cpp  Game.h  StateStack.cpp  StateStack.h
gamesystems/: ResourceCache.cpp  ResourceCache.h
graphics/: CMakeLists.txt  Camera.cpp  Camera.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsEngine.cpp  GraphicsEngine.h  IGfxDevice.h  IVulkanObject.h  Shader.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h  Utilities.cpp  Utilities.h  VlkDevice.cpp  VlkDevice.h  VlkInstance.cpp  VlkInstance.h  VlkPhysicalDevice.cpp  VlkPhysicalDevice.h  VlkSurface.cpp  VlkSurface.h  VlkSwapchain.cpp  VlkSwapchain.h  VulkanInstance.cpp  VulkanInstance.h  Window.cpp  Window.h  imgui_impl_win32.cpp  vkDevice.cpp  vkDevice.h  vkGraphicsDevice.cpp  vkGraphicsDevice.h  vkInstance.cpp  vkInstance.h  vkPhysicalDevice.cpp  vkPhysicalDevice.h
graphics/imgui/: imgui_impl_vulkan.cpp
graphics/vulkan/: VlkInstance.cpp  VlkPhysicalDevice.h  VlkSurface.h  vkGraphicsDevice.cpp
input/: InputDevice.h  InputDeviceKeyboard_Win32.cpp  InputDeviceKeyboard_Win32.h  InputDeviceMouse_Win32.h  InputManager.cpp  InputManager.h
logger/: Debug.cpp  Debug.h  StackWalker.cpp  StackWalker.h
shaders/: frag.frag  vertex.vert
source/: .clang-format  .gitignore  README.md  buildscript.py  compileShaders.bat  configure_unit_test.bat  imgui.lua  package-lock.json  package.json  premake5.lua
unit_test/: tests.cpp
(+158 files in other folders)
